--- a/index.html
+++ b/index.html
@@ -4,261 +4,238 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Portfolio website - About me</title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="style.css" />
-    <script
-      src="https://kit.fontawesome.com/cfb7f999d8.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://cdn.tailwindcss.com"></script>
-  </head>
 
-  <body>
-    <div id="header">
-      <div class="container">
-        <nav>
-          <img src="images/FullLogo_Transparent.png" class="logo" />
-          <ul>
-            <li><a href="#header">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#myprojects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </nav>
-        
-  
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>Portfolio website - About me</title>
+  <meta name="description" content="" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://kit.fontawesome.com/cfb7f999d8.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
 
-        <div class="header-text">
-          <h3> 
-            <span class="element"></span>
-            </h3>
-          <h1 class="title">
-            <span>Hi, my name is</span><br/>
-            Harshit Kapur
-          </h1>
-        </div>
-      </div>
-    </div>
-    <div id="about">
-      <div class="container">
-        <div class="row">
-          <div class="about-col-1">
-            <img src="images/h.jpg" />
-          </div>
-          <div class="about-col-2">
-            <h1 class="me">About Me</h1>
-            <p>
-              I am currently pursuing my Bachelor's degree in Computer
-              Application from Sri Guru Tegh Bahadur Institute Of Management And
-              Information Technology, New Delhi.
-            </p>
-            <br />
-
-            <p>
-              From an early age, I was fascinated by the power of technology and
-              ability to shape the world we live in.One of the aspects that
-              excites me the most about technology is its constant evolution.
-            </p>
-            <br />
-
-            <p>
-              During my course of study I have actively participated in
-              developing applications and writing research papers that support
-              my vision of finding creative implementations of current
-              technology and following the trends of evolution.
-            </p>
-            <br />
-
-            <p>
-              I thrive in staying up to date with the latest trends in the tech
-              industry and avidly follow tech news, attend conferences, and
-              participate in online communities to engage in meaningful
-              discussions and learn from fellow enthusiasts.
-            </p>
-            <br />
-            <div class="tab-titles">
-              <p class="tab-links active-link" onclick="opentab('skills')">
-                Skills
-              </p>
-              <p class="tab-links" onclick="opentab('experience')">
-                Experience
-              </p>
-              <p class="tab-links" onclick="opentab('education')">Education</p>
-            </div>
-            <div class="tab-contents active-tab" id="skills">
-              <ul>
-                <li><span>Python</span></li>
-                <li><span>C++</span></li>
-                <li><span>JAVA</span></li>
-                <li><span>MySQL</span></li>
-                <li><span>Data Analysis</span></li>
-                <li><span>Microsoft Office</span></li>
-              </ul>
-            </div>
-            <div class="tab-contents" id="experience">
-              <ul>
-                <li>
-                  <span>June 2023 - July 2023</span><br />Artificial
-                  Intelligence Intern at IBM and AICTE
-                </li>
-                <li>
-                  <span>August 2023 - September 2023</span><br />Java Developer
-                  at Codsoft
-                </li>
-              </ul>
-            </div>
-            <div class="tab-contents" id="education">
-              <ul>
-                <li>
-                  <span>2021-2024</span><br />Bachelor's in Computer Application
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div id="myprojects">
-      <div class="container">
-        <h1 class="project">My Projects</h1>
-        <div class="projects-list">
-          <div>
-            <h2>
-              British Sign Language Translator<i class="fa-solid fa-hands"></i>
-            </h2>
-            <br />
-            <p style="font-family: sans-serif"></p>
-            I recently created a project by using Tensorflow object detection
-            API<br />
-            that can recognize and translate British Sign Language(BSL) into
-            words<br />
-            in real-time.
-            <p>
-              The model of the project is built on a pre trained model<br />(ssd_mobilenet)
-              by using transfer learning.
-            </p>
-            <a
-              href="https://github.com/Harshit-Kapur/Britshsignlanguagetranslator"
-              >Learn more</a
-            >
-          </div>
-          <div>
-            <h2>Mental Fitness Tracker <i class="fa-solid fa-brain"></i></h2>
-            <br />
-            <p>
-              The Mental Fitness Tracker utilizes Jupyter notebook and Google
-              Colab,<br />
-              offering a user-friendly development environment. It incorporates
-              essential<br />components like preprocessing, feature engineering,
-              model training, and result analysis.<br />The project leverages
-              various Python libraries and frameworks, including pandas,<br />scikit-learn,
-              and matplotlib, to accomplish its objectives.
-            </p>
-            <a href="https://github.com/Harshit-Kapur/Mental-Fitness-Tracker"
-              >Learn more</a
-            >
-          </div>
-        </div>
-      </div>
-    </div>
-
+<body>
+  <div id="header">
     <div class="container">
-      <h1 class="contact me">Contact Me</h1>
-      <div id="contact">
-        <div class="contact-left">
-          <br/>
-          <div>
-            <p class="d">
-              <i class="fa-solid fa-paper-plane"></i
-              >&nbsp;harshitkapur3@gmail.com
-            </p>
-            <div class="social-icons">
-              <a href="https://www.linkedin.com/in/harshit-kapur-ab647a242/"
-                ><i class="fa-brands fa-linkedin"></i
-              ></a>
-              <a href="mailto:harshitkapur3@gmail.com"
-                ><i class="fa-regular fa-envelope"></i
-              ></a>
-              <a href="https://github.com/Harshit-Kapur"
-                ><i class="fa-brands fa-github"></i
-              ></a>
-            </div>
-          </div>
-          <a
-            href="https://drive.google.com/file/d/14MjWZRPZFyFyQBaezU42Id_XpccD40SQ/view?format=pdf"
-            class="btn"
-            >Download CV</a
-          >
+      <nav>
+        <img src="images/FullLogo_Transparent.png" class="logo" />
+        <ul>
+          <li><a href="#header">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#myprojects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+
+
+
+      <div class="header-text">
+        <h3>
+          <span class="element"></span>
+        </h3>
+        <h1 class="title">
+          <span>Hi, my name is</span><br />
+          Harshit Kapur
+        </h1>
+      </div>
+    </div>
+  </div>
+  <div id="about">
+    <div class="container">
+      <div class="row">
+        <div class="about-col-1">
+          <img src="images/h.jpg" />
         </div>
-        <div class="contact-right">
-          <form name="submit-to-google-sheet">
-            <!-- <div class="one"> -->
-            <input type="text" name="Name" placeholder="Your Name" required />
-            <input
-              type="email"
-              name="Email"
-              placeholder="Your Email"
-              required
-            />
-            <textarea
-              name="Message"
-              rows="6"
-              placeholder="Your Message"
-            ></textarea>
-            <button type="submit" class="btn btn2">Submit</button>
-          </form>
-          <span id="msg"></span>
+        <div class="about-col-2">
+          <h1 class="me">About Me</h1>
+          <p>
+            I am currently pursuing my Bachelor's degree in Computer
+            Application from Sri Guru Tegh Bahadur Institute Of Management And
+            Information Technology, New Delhi.
+          </p>
+          <br />
+
+          <p>
+            From an early age, I was fascinated by the power of technology and
+            ability to shape the world we live in.One of the aspects that
+            excites me the most about technology is its constant evolution.
+          </p>
+          <br />
+
+          <p>
+            During my course of study I have actively participated in
+            developing applications and writing research papers that support
+            my vision of finding creative implementations of current
+            technology and following the trends of evolution.
+          </p>
+          <br />
+
+          <p>
+            I thrive in staying up to date with the latest trends in the tech
+            industry and avidly follow tech news, attend conferences, and
+            participate in online communities to engage in meaningful
+            discussions and learn from fellow enthusiasts.
+          </p>
+          <br />
+          <div class="tab-titles">
+            <p class="tab-links active-link" onclick="opentab('skills')">
+              Skills
+            </p>
+            <p class="tab-links" onclick="opentab('experience')">
+              Experience
+            </p>
+            <p class="tab-links" onclick="opentab('education')">Education</p>
+          </div>
+          <div class="tab-contents active-tab" id="skills">
+            <ul>
+              <li><span>Python</span></li>
+              <li><span>C++</span></li>
+              <li><span>JAVA</span></li>
+              <li><span>MySQL</span></li>
+              <li><span>Data Analysis</span></li>
+              <li><span>Microsoft Office</span></li>
+            </ul>
+          </div>
+          <div class="tab-contents" id="experience">
+            <ul>
+              <li>
+                <span>June 2023 - July 2023</span><br />Artificial
+                Intelligence Intern at IBM and AICTE
+              </li>
+              <li>
+                <span>August 2023 - September 2023</span><br />Java Developer
+                at Codsoft
+              </li>
+            </ul>
+          </div>
+          <div class="tab-contents" id="education">
+            <ul>
+              <li>
+                <span>2021-2024</span><br />Bachelor's in Computer Application
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
-    <div class="copyright">
-      <p>"copyright © Harshit Kapur. Thank you for visiting"</p>
+  </div>
+  <div id="myprojects">
+    <div class="container">
+      <h1 class="project">My Projects</h1>
+      <div class="projects-list">
+        <div>
+          <h2>
+            British Sign Language Translator<i class="fa-solid fa-hands"></i>
+          </h2>
+          <br />
+          <p style="font-family: sans-serif"></p>
+          I recently created a project by using Tensorflow object detection
+          API<br />
+          that can recognize and translate British Sign Language(BSL) into
+          words<br />
+          in real-time.
+          <p>
+            The model of the project is built on a pre trained model<br />(ssd_mobilenet)
+            by using transfer learning.
+          </p>
+          <a href="https://github.com/Harshit-Kapur/Britshsignlanguagetranslator">Learn more</a>
+        </div>
+        <div>
+          <h2>Mental Fitness Tracker <i class="fa-solid fa-brain"></i></h2>
+          <br />
+          <p>
+            The Mental Fitness Tracker utilizes Jupyter notebook and Google
+            Colab,<br />
+            offering a user-friendly development environment. It incorporates
+            essential<br />components like preprocessing, feature engineering,
+            model training, and result analysis.<br />The project leverages
+            various Python libraries and frameworks, including pandas,<br />scikit-learn,
+            and matplotlib, to accomplish its objectives.
+          </p>
+          <a href="https://github.com/Harshit-Kapur/Mental-Fitness-Tracker">Learn more</a>
+        </div>
+      </div>
     </div>
+  </div>
 
-    <script>
-      var tablinks = document.getElementsByClassName("tab-links");
-      var tabcontents = document.getElementsByClassName("tab-contents");
+  <div class="container">
+    <h1 class="contact me">Contact Me</h1>
+    <div id="contact">
+      <div class="contact-left">
+        <br />
+        <div>
+          <p class="d">
+            <i class="fa-solid fa-paper-plane"></i>&nbsp;harshitkapur3@gmail.com
+          </p>
+          <div class="social-icons">
+            <a href="https://www.linkedin.com/in/harshit-kapur-ab647a242/"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="mailto:harshitkapur3@gmail.com"><i class="fa-regular fa-envelope"></i></a>
+            <a href="https://github.com/Harshit-Kapur"><i class="fa-brands fa-github"></i></a>
+          </div>
+        </div>
+        <a href="https://drive.google.com/file/d/14MjWZRPZFyFyQBaezU42Id_XpccD40SQ/view?format=pdf" class="btn">Download
+          CV</a>
+      </div>
+      <div class="contact-right">
+        <form name="submit-to-google-sheet">
+          <!-- <div class="one"> -->
+          <input type="text" name="Name" placeholder="Your Name" required />
+          <input type="email" name="Email" placeholder="Your Email" required />
+          <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+          <button type="submit" class="btn btn2">Submit</button>
+        </form>
+        <span id="msg"></span>
+      </div>
+    </div>
+  </div>
+  <div class="copyright">
+    <p>"copyright © Harshit Kapur. Thank you for visiting"</p>
+  </div>
 
-      function opentab(tabname) {
-        for (tablink of tablinks) {
-          tablink.classList.remove("active-link");
-        }
-        for (tabcontent of tabcontents) {
-          tabcontent.classList.remove("active-tab");
-        }
-        event.currentTarget.classList.add("active-link");
-        document.getElementById(tabname).classList.add("active-tab");
+  <script>
+    var tablinks = document.getElementsByClassName("tab-links");
+    var tabcontents = document.getElementsByClassName("tab-contents");
+
+    function opentab(tabname) {
+      for (tablink of tablinks) {
+        tablink.classList.remove("active-link");
       }
-    </script>
-    <script>
-      const scriptURL = 'https://script.google.com/macros/s/AKfycbyzwUThtYyoMbOGdTudhwbafNVvG2v22Ipon6_GSEG4OPuJU6qWFzptt9XYd_qUQ1t7/exec'
-      const form = document.forms['submit-to-google-sheet']
-      const msg=document.getElementById("msg")
-    
-      form.addEventListener('submit', e => {
-        e.preventDefault()
-        fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-          .then(response => {
-            msg.innerHTML="Message sent successfully"
-            setTimeout(function(){
-              msg.innerHTML=""
-            },5000)
-            form.reset()
-          })
-          .catch(error => console.error('Error!', error.message))
-      })
-    </script>
-      <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-    <script>
-      var typed = new Typed('.element', {
-        strings: ['AI/ML Enthusiast','Researcher','Tech Savy'],
-        typeSpeed: 50,
-      });
-    </script>
-  </body>
+      for (tabcontent of tabcontents) {
+        tabcontent.classList.remove("active-tab");
+      }
+      event.currentTarget.classList.add("active-link");
+      document.getElementById(tabname).classList.add("active-tab");
+    }
+  </script>
+
+  <script>
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbyzwUThtYyoMbOGdTudhwbafNVvG2v22Ipon6_GSEG4OPuJU6qWFzptt9XYd_qUQ1t7/exec'
+    const form = document.forms['submit-to-google-sheet']
+    const msg = document.getElementById("msg")
+
+    form.addEventListener('submit', e => {
+      e.preventDefault()
+      fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+        .then(response => {
+          msg.innerHTML = "Message sent successfully"
+          setTimeout(function () {
+            msg.innerHTML = ""
+          }, 5000)
+          form.reset()
+        })
+        .catch(error => console.error('Error!', error.message))
+    })
+  </script>
+
+  <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+  <script>
+    var typed = new Typed('.element', {
+      strings: ['AI/ML Enthusiast', 'Researcher', 'Tech Savy'],
+      typeSpeed: 50,
+    });
+  </script>
+</body>
+
 </html>
